# THBKG

./: .gitignore  GRAPH_STRUCTURE.md  LICENSE  README.md  TRAINING_DETAILS.md  croissant.json  evaluate_advancement.py  evaluate_prospective_standalone.py  explain_advancement.py  graph_clinical_trial_analysis.md  inspect_graph.py  pagelink_explain.py  pyproject.toml
THBKG/: poster_v1_20260421.tex  thbkg_20260420.tex
config/: benchmark_config.yaml  datatype_mapping.yaml  edge_schema.yaml  edge_schema_23.06.yaml  edge_schema_23.06_clinical_only.yaml  edge_schema_26.03.yaml  edge_schema_26.03_clinical_only.yaml  event_graph_config.yaml  node_schema.yaml  progression_config.yaml  static_edge_schema.yaml
docs/: temporal_evaluation_explained.md
headline_results/: traineval_ta_summary_w3.csv  traineval_ta_summary_w3.tex
note/: temporal_masking_strict_vs_loose.md
scripts/: assembling_graph_04.sh  build_full_graph.sh  build_tft_dataset_05.sh  building_event_graph_02.sh  casestudy_temporal_evidence.py  collecting_edges_01.sh  collecting_node_features_03.sh  debug_data_stats.py  download.sh  extract_mappings.py  inspect_edge_time_provenance.py  inspect_parquets.sh  plot_explanation_paths.py  run_build.sh  run_build_event_graph.sh  run_finetune_event_hgt.sh  run_inspect_edge_time.sh  run_pipeline.sh  run_pretrain_event_hgt.sh  run_split_data.sh  run_train.sh  run_train_event.sh  run_train_event_hgt.sh  run_train_time_agnostic.sh
src/: advancement_core.py  evaluate_clinical_progression.py  evaluate_clinical_ranking.py  evaluate_clinical_ranking_opentargets_association.py  (+17 more)
(+387 files in other folders)
